@@ -1,3 +1,12 @@
+2014-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tools/tiff2pdf.c (t2p_read_tiff_init): TIFFTAG_TRANSFERFUNCTION
+	tag can return one channel, with the other two channels set to
+	NULL.  The tiff2pdf code was expecting that other two channels
+	were duplicate pointers in the case where there is only one
+	channel.  Detect this condition in order to avoid a crash, and
+	presumably perform correctly with just one channel.
+
 2014-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tools/tiffdump.c: Fix double-free bug.
